Other_WIP/Keycloak/template_secrets.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
